--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "graphql": "^16.8.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-safe-area-context": "^4.7.1",
