--- a/ios/EldenRingApp/Info.plist
+++ b/ios/EldenRingApp/Info.plist
@@ -55,6 +55,7 @@
 	<array>
 		<string>Mantinia Regular.ttf</string>
 		<string>CormorantGaramond-Regular.ttf</string>
+		<string>Raleway-VariableFont_wght.ttf</string>
 	</array>
 </dict>
 </plist>
