--- a/ios/EldenRingApp/Info.plist
+++ b/ios/EldenRingApp/Info.plist
@@ -56,6 +56,15 @@
 		<string>Mantinia Regular.ttf</string>
 		<string>CormorantGaramond-Regular.ttf</string>
 		<string>Raleway-VariableFont_wght.ttf</string>
+		<string>CormorantGaramond-Bold.ttf</string>
+		<string>CormorantGaramond-BoldItalic.ttf</string>
+		<string>CormorantGaramond-Italic.ttf</string>
+		<string>CormorantGaramond-Light.ttf</string>
+		<string>CormorantGaramond-LightItalic.ttf</string>
+		<string>CormorantGaramond-Medium.ttf</string>
+		<string>CormorantGaramond-MediumItalic.ttf</string>
+		<string>CormorantGaramond-SemiBold.ttf</string>
+		<string>CormorantGaramond-SemiBoldItalic.ttf</string>
 	</array>
 </dict>
 </plist>
