--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^16.8.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0"
   },
@@ -25,6 +26,9 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@graphql-codegen/cli": "5.0.0",
+    "@graphql-codegen/typescript": "^4.0.1",
+    "@graphql-codegen/typescript-operations": "^4.0.1",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
@@ -36,10 +40,7 @@
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "4.8.4",
-    "@graphql-codegen/cli": "5.0.0",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-operations": "^4.0.1"
+    "typescript": "4.8.4"
   },
   "engines": {
     "node": ">=16"
