--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-linear-gradient": "^2.8.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
-    "react-native-section-alphabet-list": "^3.0.0"
+    "react-native-section-alphabet-list": "^3.0.0",
+    "react-native-select-dropdown": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
