--- a/ios/EldenRingApp/Info.plist
+++ b/ios/EldenRingApp/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -55,9 +55,9 @@
 	<array>
 		<string>Mantinia Regular.ttf</string>
 		<string>CormorantGaramond-Regular.ttf</string>
+		<string>CormorantGaramond-BoldItalic.ttf</string>
 		<string>Raleway-VariableFont_wght.ttf</string>
 		<string>CormorantGaramond-Bold.ttf</string>
-		<string>CormorantGaramond-BoldItalic.ttf</string>
 		<string>CormorantGaramond-Italic.ttf</string>
 		<string>CormorantGaramond-Light.ttf</string>
 		<string>CormorantGaramond-LightItalic.ttf</string>
@@ -65,6 +65,26 @@
 		<string>CormorantGaramond-MediumItalic.ttf</string>
 		<string>CormorantGaramond-SemiBold.ttf</string>
 		<string>CormorantGaramond-SemiBoldItalic.ttf</string>
+		<string>ntDesign.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>Feather.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>FontAwesome6_Brands.ttf</string>
+		<string>FontAwesome6_Regular.ttf</string>
+		<string>FontAwesome6_Solid.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>Foundation.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Zocial.ttf</string>
 	</array>
 </dict>
 </plist>
