--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-section-alphabet-list": "^3.0.0",
-    "react-native-select-dropdown": "^3.4.0"
+    "react-native-select-dropdown": "^3.4.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
