--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-linear-gradient": "^2.8.2",
+    "react-native-mmkv": "^2.10.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
     "react-native-section-alphabet-list": "^3.0.0",
@@ -38,6 +39,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/jest": "^29.5.4",
     "@types/react": "^18.0.24",
+    "@types/react-native-vector-icons": "^6.4.14",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.4",
     "eslint": "^8.19.0",
